--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.scrollBar::-webkit-scrollbar {
+  /* width: 8px; */
+  display: none;
+}
+
+.scrollBar::-webkit-scrollbar-track {
+  background-color: #8684844f;
+  border-radius: 100px;
+}
+
+.scrollBar::-webkit-scrollbar-thumb {
+  background-color: #3d3b3a;
+  border-radius: 100px;
+}
